# ADHDo

./: .coveragerc  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  2025-08-05-this-session-is-being-continued-from-a-previous-co.txt  2025-08-06-this-session-is-being-continued-from-a-previous-co.txt  ACCESSIBILITY_TESTING_QUICKSTART.md  ADHD_SYSTEM_TEST_RESULTS.md  AUDIO_FIX_DOCUMENTATION.md  AUTHENTICATION_SECURITY_IMPLEMENTATION.md  BETA_DEPLOYMENT_READY.md  CLAUDE.md  CLAUDE_BROWSER_AUTH_SUCCESS.md  CLAUDE_INTEGRATION_COMPLETE.md  COGNITIVE_LOOP_FLOW.md  CONTEXT_AWARE_PROMPTING.md  CONTRIBUTING.md  CRITICAL_ANALYSIS.md  DATABASE_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PHASE_PLAN.md  Dockerfile  ENHANCED_ONBOARDING_IMPLEMENTATION.md  FIT_DATA_ENHANCEMENT.md  GOOGLE_APIS_INTEGRATION_COMPLETE.md  GOOGLE_API_STATUS.md  GOOGLE_CALENDAR_INTEGRATION_SUMMARY.md  HONEST_STATUS_ASSESSMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TIMELINE.md  ISSUE_49_IMPLEMENTATION_COMPLETE.md  ISSUE_CLEANUP_COMPLETED.md  ISSUE_CLEANUP_PLAN.md  ISSUE_CLEANUP_READY.md  ISSUE_GROOMING_RECOMMENDATIONS.md  MCP_ARCHITECTURE.md  MOBILE_UX_IMPROVEMENTS.md  MONETIZATION_ROADMAP.md  (+123 more)
.claude/agents/: codeforge-architect.md  verifier-scribe.md
.claude/commands/: is-claude-smoking-crack.md  music-help.md  music-next.md  music-play.md  music-status.md  music-stop.md  music-volume.md
.github/workflows/: accessibility-testing.yml  ci.yml  evolutionary-ci.yml  issue-grooming.yml  security-hardening.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_github_automation_schema.py  003_authentication_security.py  31c23c36a519_fix_sqlite_compatibility_for_datetime_.py  ca59600a9969_merge_authentication_security_with_.py
claude-browser-package/: .gitignore  LICENSE  README.md  demo.ipynb  setup.py
claude-browser-package/claude_browser/: __init__.py  client.py  client_v2.py  exceptions.py
claude-browser-package/examples/: basic_usage.py  context_manager.py  error_handling.py
docker/: entrypoint-github-automation.sh  github-automation.dockerfile
docs/: A Framework for the Safe, Ethical, and Efficacious Deployment of an AI-Driven Mental Health Companion.md  A Neurodiversity-Affirming Framework for Participatory Research_ Principles for Accessible, Non-Overwhelming, and Productive Co-Design Workshops.md  A Sociotechnical Framework for Empowering Affective Computing_ Democratic Legitimation, Privacy by Design, and Adversarial Collaboration (1).md  ACCESSIBILITY_CHECKLIST.md  ACCESSIBILITY_TESTING.md  ADHD_ERROR_HANDLING.md  API_DOCUMENTATION.md  Digital Phenotypes of Neurodiversity_ A Foundational Analysis for Enhancing the SENTINEL.ME Architecture.md  GETTING_STARTED.md  GITHUB_AUTOMATION_ARCHITECTURE.md  GITHUB_AUTOMATION_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_ROADMAP.md  INFRASTRUCTURE-HARDENING-SUMMARY.md  INTEGRATION_OPTIMIZATION_REPORT.md  ISSUE_GROOMING_GUIDE.md  LLM_ROUTING_STRATEGY.md  README.md  RECURSIVE_IMPROVEMENT_METHODOLOGY.md  RECURSIVE_OPTIMIZATION_ARCHITECTURE.md  TECHNOLOGY_STACK_ANALYSIS.md  The MCP Server_ An Architectural Blueprint for a Contextual Operating System (1).md  The MCP Server_ An Architectural Blueprint for a Contextual Operating System.md  adhd_errors_demo.py
docs/operations/: backup-recovery.md  incident-response.md  monitoring-playbooks.md
monitoring/: docker-compose.monitoring.yml  prometheus.yml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
nginx/ssl/: cert.pem  key.pem
reports/: issue_grooming_execution_20250809_092523.md  issue_grooming_report_20250807_033345.md  issue_grooming_report_20250807_040914.md
scripts/: add_beta_endpoints.py  add_mcp_endpoints.py  auto_setup.sh  check_adhd_performance.py  generate-secrets.sh  generate-ssl-cert.sh  generate_accessibility_report.py  github_issue_grooming.py  health-check.sh  init-db.sql  issue_helpers.sh  performance_profiler.py  run_accessibility_tests.sh  run_issue_grooming.sh  run_tests.sh  security-validation.sh  setup_for_personal_use.sh  setup_monitoring.py  setup_telegram_bot.py  test_all_systems.py  test_background_processing.py
scripts/templates/: .env.template
src/adhd/: __init__.py  adaptation_engine.py  enhanced_cognitive_loop.py  executive_function.py  ml_pipeline.py  pattern_engine.py  user_profile.py
src/calendar/: __init__.py  client.py  context.py  nudges.py  processor.py
src/calendar_integration/: models.py
src/frames/: __init__.py  builder.py
src/github_automation/: __init__.py  audit_logger.py  automation_engine.py  cache_manager.py  feature_detector.py  github_client.py  models.py  rate_limiter.py  requirements-automation.txt  rollback_manager.py  webhook_handler.py
src/mcp_client/: __init__.py  auth.py  browser_auth.py  client.py  models.py  registry.py  workflow.py
src/mcp_server/: __about__.py  __init__.py  adhd_assistant.py  adhd_errors.py  adhd_logger.py  adhd_reminders.py  alerting.py  auth.py  background_processing.py  beta_onboarding.py  cache_strategies.py  caching_system.py  claude_browser_auth.py  claude_browser_working.py  claude_client.py  claude_cognitive_engine_v2.py  claude_context_builder.py  claude_only_endpoint.py  claude_playwright.py  claude_remote_browser.py  claude_system_browser.py  claude_v2_endpoint.py  claude_with_tools.py  cognitive_endpoints.py  cognitive_loop.py  cognitive_loop_integration.py  component_adapters.py  config.py  context_aware_prompting.py  dashboard_config.py  database.py  database_alerting.py  database_migration.py  database_monitoring.py  database_optimization.py  database_storage.py  db_cli.py  (+55 more)
static/: calendar-setup.html  claude_v2_ui.html  dashboard.html  enhanced-onboarding.html  evolution-observatory-monolithic.html.backup  evolution-observatory.html  index.html  manifest.json  mcp_setup.html  mobile-dashboard.html  mobile-index.html  mobile-scheduler.html  mobile-test.html
templates/: docs_portal.html
tests/: __init__.py  conftest.py  simple_beta_test.py  test_adhd_errors.py  test_enhanced_onboarding.py  test_performance_regression.py  test_runner.py  utils.py
(+88 files in other folders)
