[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-adhd-server"
dynamic = ["version"]
description = "Meta-Cognitive Protocol server for ADHD executive function support"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["adhd", "ai", "productivity", "llm", "context", "executive-function"]
authors = [
  { name = "Adrian Wedd", email = "adrian@adrianwedd.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Office/Business :: Scheduling",
]
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.4.0",
  "redis>=5.0.0",
  "asyncpg>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "alembic>=1.12.0",
  "httpx>=0.25.0",
  "python-telegram-bot>=20.0",
  "openai>=1.3.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "structlog>=23.2.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "psutil>=5.9.0",
  "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "pytest-benchmark>=4.0.0",
  "pytest-xdist>=3.3.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.6.0",
  "pre-commit>=3.5.0",
  "bandit>=1.7.5",
  "safety>=2.3.0",
  "coverage[toml]>=7.3.0",
  "httpx>=0.25.0",
]
integrations = [
  "google-api-python-client>=2.100.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.1.0",
  "homeassistant-api>=4.1.0",
]
ai = [
  "langchain>=0.0.300",
  "langchain-openai>=0.0.2",
  "tiktoken>=0.5.0",
]

[project.urls]
Documentation = "https://github.com/adrianwedd/mcp-adhd-server#readme"
Issues = "https://github.com/adrianwedd/mcp-adhd-server/issues"
Source = "https://github.com/adrianwedd/mcp-adhd-server"

[project.scripts]
mcp-server = "mcp_server.cli:main"

[tool.hatch.version]
path = "src/mcp_server/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov-html = [
  "- coverage combine", 
  "coverage html",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.coverage.run]
source_dir = "src"
branch = true
parallel = true
omit = [
  "src/mcp_server/__about__.py",
]

[tool.coverage.paths]
mcp_server = ["src/mcp_server", "*/mcp-adhd-server/src/mcp_server"]
tests = ["tests", "*/mcp-adhd-server/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
target-version = ["py39"]
line-length = 88
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
  "A",
  "ARG", 
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["mcp_server"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
mypy_path = "src"
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "redis.*",
  "telegram.*",
  "homeassistant_api.*",
]
ignore_missing_imports = true